tests/baselines/reference/es5ExportDefaultClassDeclaration3(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
es5ExportDefaultClassDeclaration3.ts(1,21): error TS2449: Class 'C' used before its declaration.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== es5ExportDefaultClassDeclaration3.ts (1 errors) ====
    var before: C = new C();
                        ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 es5ExportDefaultClassDeclaration3.ts:3:22: 'C' is declared here.
    
    export default class C {
        method(): C {
            return new C();
        }
    }
    
    var after: C = new C();
    
    var t: typeof C = C;
    
    